Pipeline construction done with simple case statement
Previously it used privileged newIstance() calls which were unnecessary.
The mechanism had a hard coded enum of pipeline types anyway

Advice when --add-opens might be needed output above the error it causes